fixes #200
The min-height is not really needed.
Removing it eliminates the whitespace at the bottom of articles

--- a/css/main.css
+++ b/css/main.css
@@ -1055,9 +1055,7 @@ ul {
     margin-right: 2em;
     text-align: right;
   }
-  .blog .content {
-    min-height: 135em;
-  }
+
   .related {
       text-align: right;
   }
@@ -1104,9 +1102,6 @@ ul {
       right: 0;
       margin-right: 0em;
       margin-top: 0em;
-    }
-    .blog .content {
-      min-height: 140em;
     }
 
     .sponsors div {
